--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-/* Version: ${pkg.version} */
+/* Version: 2.0.3 */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -25,7 +25,6 @@
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 89.8%;
-    /* --ring: 0 0% 3.9%; */
     --radius: 0.5rem;
   }
 
@@ -49,7 +48,7 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 14.9%;
-    /* --ring: 0 0% 83.1%; */
+    --radius: 0.5rem;
   }
 
   div.preview * {
@@ -65,12 +64,7 @@ body {
 }
 @layer base {
   :root {
-    /* @apply text-[14px] tablet:text-[16px]; */
     @apply text-[100%];
-  }
-  * {
-    @apply border-border;
-    /* @apply outline outline-1 outline-red-500; */
   }
   body {
     @apply bg-background text-foreground;
